default/objects/E2E_Form_General_Settings__c/fields/Abandonment_User__c.field-meta.xml
<CustomField>
    <fullName>Abandonment_User__c</fullName>
    <label>Abandonment User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>