default/objects/E2E_Form_General_Settings__c/fields/E2E_Guest_User_Id__c.field-meta.xml
<CustomField>
    <fullName>E2E_Guest_User_Id__c</fullName>
    <label>E2E Guest User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>