default/objects/E2E_Form_General_Settings__c/fields/Enable_authorization_non_granted_check__c.field-meta.xml
<CustomField>
    <fullName>Enable_authorization_non_granted_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable authorization non granted check</label>
    <type>Checkbox</type>
</CustomField>