default/objects/E2E_Form_General_Settings__c/fields/Enable_financial_information__c.field-meta.xml
<CustomField>
    <fullName>Enable_financial_information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable financial information</label>
    <type>Checkbox</type>
</CustomField>