default/objects/E2E_Form_General_Settings__c/fields/Enable_VAT_API_Checker__c.field-meta.xml
<CustomField>
    <fullName>Enable_VAT_API_Checker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable VAT API Checker</label>
    <type>Checkbox</type>
</CustomField>