default/objects/E2E_Form_General_Settings__c/fields/Files_Generator_Url__c.field-meta.xml
<CustomField>
    <fullName>Files_Generator_Url__c</fullName>
    <label>Files Generator Url</label>
    <type>Url</type>
</CustomField>