default/objects/E2E_Form_General_Settings__c/fields/Integration_Admin_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Admin_Id__c</fullName>
    <label>Integration Admin Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>