default/objects/E2E_Form_General_Settings__c/fields/Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL__c</fullName>
    <label>Payment URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>