default/objects/E2E_Form_General_Settings__c/fields/Set_GFN_Status__c.field-meta.xml
<CustomField>
    <fullName>Set_GFN_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set GFN Status</label>
    <type>Checkbox</type>
</CustomField>